examples/test/testpolicy2215.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2215
  namespace: namespace366
spec:
  podSelector:
    matchLabels:
      key41: value7
      key31: value3
      key23: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value21
          key21: value4
          key9: value16
      podSelector:
        matchLabels:
          key32: value1
